fix highlighting and filtering of shifts

--- a/src/main/webapp/WEB-INF/styles/main.scss
+++ b/src/main/webapp/WEB-INF/styles/main.scss
@@ -30,6 +30,11 @@ $brand-danger:  #d9534f;
   margin: 0 0.5em;
   width: 140px;
 }
+.schedule-view-row {
+  height: 35px;
+  padding: 5px;
+  border-bottom: 1px solid #f6f6f6;
+}
 .schedule-edit{
   padding: 0;
   border-radius: 5px;
@@ -125,7 +130,8 @@ $brand-danger:  #d9534f;
   color: #336699;
 }
 .highlighted {
-  background-color: yellow;
+  outline: 1px solid yellow;
+  background-color: #ffffb3;
 }
 .week-nav-button {
   box-shadow: none;
